--- a/Nonsense.MvcApp/Areas/_ViewImports.cshtml
+++ b/Nonsense.MvcApp/Areas/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Nonsense.Infrastructure.Identity
-@using Nonsense.MvcApp.Areas.Admin.Features.Users
+@using Nonsense.MvcApp.Areas.Admin.Features.Accounts
 @using Nonsense.Application.Users.Dto
