--- a/Nonsense.MvcApp/Features/Dev/SiteMap.cshtml
+++ b/Nonsense.MvcApp/Features/Dev/SiteMap.cshtml
@@ -26,6 +26,6 @@
   <a asp-action="Index" asp-controller="Feedback">Feedback</a><br />
   <a asp-action="Index" asp-controller="Band">Band</a><br />
   <p>Admin area</p>
-  <a asp-action="Index" asp-controller="Users" asp-area="Admin">Users</a>
+  <a asp-action="Index" asp-controller="Accounts" asp-area="Admin">Users</a>
 </body>
 </html>
