--- a/Nonsense.MvcApp/Areas/Admin/Features/Shared/_Layout.cshtml
+++ b/Nonsense.MvcApp/Areas/Admin/Features/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <nav class="mt-4 mb-4 border-top">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" asp-action="Index" asp-controller="Users">Пользователи</a>
+          <a class="nav-link" asp-action="Index" asp-controller="Accounts">Пользователи</a>
         </li>
       </ul>
     </nav>
