--- a/Nonsense.MvcApp/Areas/Admin/Features/Accounts/Edit.cshtml
+++ b/Nonsense.MvcApp/Areas/Admin/Features/Accounts/Edit.cshtml
@@ -4,23 +4,31 @@
     ViewBag.Title = "Редактировать пользователя";
 }
 
-<div class="p-1 bg-primary text-white"><h4>Редактировать пользователя</h4></div>
+<div class="p-1 mb-2 bg-primary text-white"><h4>Редактировать пользователя</h4></div>
 
-<div asp-validation-summary="All" class="text-danger"></div>
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 <form asp-action="Edit" method="post">
   <input type="hidden" asp-for="Id" value="@Model.Id" />
   <div class="form-group">
     <label asp-for="UserName"></label>
+    <span asp-validation-for="UserName" class="d-block text-danger"></span>
     <input asp-for="UserName" class="form-control" />
   </div>
   <div class="form-group">
     <label asp-for="Email"></label>
+    <span asp-validation-for="Email" class="d-block text-danger"></span>
     <input asp-for="Email" class="form-control" />
   </div>
   <div class="form-group">
     <label asp-for="Password"></label>
+    <span asp-validation-for="Password" class="d-block text-danger"></span>
     <input asp-for="Password" class="form-control" />
+  </div>
+  <div class="form-group">
+    <label asp-for="ConfirmPassword"></label>
+    <span asp-validation-for="ConfirmPassword" class="d-block text-danger"></span>
+    <input asp-for="ConfirmPassword" class="form-control" />
   </div>
   <button type="submit" class="btn btn-primary">Сохранить</button>
   <a asp-action="Index" class="btn btn-secondary">Закрыть</a>
