--- a/Nonsense.MvcApp/Areas/_ViewImports.cshtml
+++ b/Nonsense.MvcApp/Areas/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Nonsense.Infrastructure.Identity
 @using Nonsense.MvcApp.Areas.Admin.Features.Accounts
 @using Nonsense.Application.Users.Dto
+@using Nonsense.MvcApp.Infrastructure
