--- a/Nonsense.MvcApp/Features/Shared/_Layout.cshtml
+++ b/Nonsense.MvcApp/Features/Shared/_Layout.cshtml
@@ -9,8 +9,7 @@
   <environment include="Development">
     <link rel="stylesheet" href="~/lib/normalize/normalize.min.css" />
     <link rel="stylesheet"
-          asp-href-include="~/css/**/*.css"
-          asp-href-exclude="~/css/site.css"
+          asp-href-include="~/css/main/**/*.css"
           asp-append-version="true" />
   </environment>
   <environment exclude="Development">
