--- a/Nonsense.MvcApp/Areas/Admin/Features/Accounts/Edit.cshtml
+++ b/Nonsense.MvcApp/Areas/Admin/Features/Accounts/Edit.cshtml
@@ -1,35 +1,40 @@
 ﻿@model EditViewModel
 
-@{ 
-    ViewBag.Title = "Редактировать пользователя";
+@{
+  ViewBag.Title = "Редактирование пользователя";
+  ViewBag.Description = "Редактирование информации о зарегистрированном пользователе";
 }
 
-<div class="p-1 mb-2 bg-primary text-white"><h4>Редактировать пользователя</h4></div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-<form asp-action="Edit" method="post">
-  <input type="hidden" asp-for="Id" value="@Model.Id" />
-  <div class="form-group">
-    <label asp-for="UserName"></label>
-    <span asp-validation-for="UserName" class="d-block text-danger"></span>
-    <input asp-for="UserName" class="form-control" />
+      <form asp-action="Edit" method="post">
+        <input type="hidden" asp-for="Id" value="@Model.Id" />
+        <div class="form-group">
+          <label asp-for="UserName"></label>
+          <span asp-validation-for="UserName" class="d-block text-danger"></span>
+          <input asp-for="UserName" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label asp-for="Email"></label>
+          <span asp-validation-for="Email" class="d-block text-danger"></span>
+          <input asp-for="Email" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label asp-for="Password"></label>
+          <span asp-validation-for="Password" class="d-block text-danger"></span>
+          <input asp-for="Password" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label asp-for="ConfirmPassword"></label>
+          <span asp-validation-for="ConfirmPassword" class="d-block text-danger"></span>
+          <input asp-for="ConfirmPassword" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary">Сохранить</button>
+        <a asp-action="Index" class="btn btn-secondary">Закрыть</a>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label asp-for="Email"></label>
-    <span asp-validation-for="Email" class="d-block text-danger"></span>
-    <input asp-for="Email" class="form-control" />
-  </div>
-  <div class="form-group">
-    <label asp-for="Password"></label>
-    <span asp-validation-for="Password" class="d-block text-danger"></span>
-    <input asp-for="Password" class="form-control" />
-  </div>
-  <div class="form-group">
-    <label asp-for="ConfirmPassword"></label>
-    <span asp-validation-for="ConfirmPassword" class="d-block text-danger"></span>
-    <input asp-for="ConfirmPassword" class="form-control" />
-  </div>
-  <button type="submit" class="btn btn-primary">Сохранить</button>
-  <a asp-action="Index" class="btn btn-secondary">Закрыть</a>
-</form>
+</div>
